--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
 </head>
 <body>
     <div class="app-container">
-        <!-- Columna de selección de parejas de chat -->
-        <div class="chat-list">
-            <h2>Parejas de Chat</h2>
-            <input type="text" id="searchInput" placeholder="Buscar pareja..." oninput="filterChatPairs()">
-            <div id="chat-pairs-buttons"></div> <!-- Aquí se añadirán las parejas dinámicamente -->
-        </div>
-
-        <div class="button-container">
-            <!-- Botón para añadir una nueva pareja de chat -->
-            <button class="add-chat-pair-button" onclick="addChatPair()">Añadir Pareja</button>
-        
-            <!-- Botón para eliminar la pareja de chat seleccionada -->
-            <button class="delete-chat-pair-button" onclick="confirmDeleteChatPair()">Eliminar pareja</button>
+        <!-- Columna izquierda para los botones y la lista de parejas de chat -->
+        <div class="sidebar">
+            <div class="pair-button-container">
+                <button class="add-chat-pair-button" onclick="addChatPair()">Añadir</button>
+                <button class="delete-chat-pair-button" onclick="confirmDeleteChatPair()">Eliminar</button>
+            </div>
+            <div class="chat-list">
+                <h2>Parejas de Chat</h2>
+                <input type="text" id="searchInput" placeholder="Buscar pareja..." oninput="filterChatPairs()">
+                <div id="chat-pairs-buttons"></div> <!-- Aquí se añadirán las parejas dinámicamente -->
+            </div>
         </div>
 
         <!-- Contenedor principal para las parejas de chat -->
